<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flex Music</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search your music...</string>
    <string name="decorative_image">Decorative Image</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="favorite">Add to Favorites</string>
</resources>