<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.FlexMusic.Card.Song"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="@drawable/ripple_card"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_medium"
        android:gravity="center_vertical"
        android:minHeight="@dimen/touch_target_min">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/album_art_small"
            android:layout_height="@dimen/album_art_small"
            app:cardCornerRadius="@dimen/corner_radius_small"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/songImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_music_note"
                android:scaleType="centerCrop"
                android:background="@color/primaryLightColor"
                android:padding="@dimen/spacing_small"
                app:tint="@color/white"
                android:contentDescription="@string/song_title"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_small">

            <TextView
                android:id="@+id/textSongTitle"
                style="@style/TextAppearance.FlexMusic.Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_title"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textSongArtist"
                style="@style/TextAppearance.FlexMusic.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_name"
                android:maxLines="1"
                android:ellipsize="end"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/moreIcon"
            style="@style/Widget.FlexMusic.Button.Icon"
            android:layout_width="@dimen/touch_target_min"
            android:layout_height="@dimen/touch_target_min"
            android:src="@drawable/ic_add_circle"
            android:contentDescription="@string/favorite"
            app:tint="@color/textSecondary"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
